# project-backend

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
apps/core/: urls.py
apps/core/views/: home.py
config/: settings.py  urls.py
